[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/level/assets/key.png" type="Texture" id=1]
[ext_resource path="res://scenes/level/Key.gd" type="Script" id=2]
[ext_resource path="res://scenes/level/assets/key.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/level/assets/key-rare.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[node name="Key" type="Node2D"]
z_index = 100
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AudioKeyRare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
